--- a/app.json
+++ b/app.json
@@ -1,38 +1,41 @@
 {
-    "name": "Anime Gallery Bot",
-    "description": "Telegram Bot is for downloading any anime direclty via links in multiple quality",
+    "name": "Channel Auto Post",
+    "description": "Channel Auto Post Bot for telegram, by @BotzHub.",
+    "logo": "",
     "keywords": [
-      "telegram",
-      "best",
-      "anime download",
-      "anime",
-      "manga",
-      "manga download"
+        "telegram",
+        "telethon",
+        "telegram-bot",
+        "botzhub"
     ],
-    "success_url": "https://t.me/Anime_Gallery_Robot",
-    "website": "https://github.com/MiyukiKun",
-    "repository": "https://github.com/MiyukiKun/Anime_Gallery_Bot",
+    "repository": "https://github.com/xditya/ChannelAutoPost",
+    "website": "xditya.me",
+    "success_url": "https://t.me/BotzHub",
     "env": {
-      "API_ID": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": ""
-      },
-      "API_HASH": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": ""
-      },
-       "BOT_TOKEN": {
-        "description": "Your bot token, as a string. Get it from @BotFather on telegram",
-        "value": ""
-      }
-  },
-    "buildpacks": [{
-      "url": "heroku/python"
-    }],
-    "formation": {
-      "worker": {
-        "quantity": 1,
-        "size": "free"
-      }
-    }
-  }
+        "BOT_TOKEN": {
+            "description": "Bot token, get it from @BotFather.",
+            "value": ""
+        },
+        "APP_ID": {
+            "description": "Your app id from my.telegram.org",
+            "value": ""
+        },
+        "API_HASH": {
+            "API_HASH": "Your api hash from my.telegram.org",
+            "value": ""
+        },
+        "FROM_CHANNEL": {
+            "description": "The ID of the main channel from where posts have to be copied.",
+            "value": ""
+        },
+        "TO_CHANNEL": {
+            "description": "The ID of the channel to which the posts are to be sent.",
+            "value": ""
+        }
+    },
+    "buildpacks": [
+        {
+            "url": "heroku/python"
+        }
+    ]
+}
